--- a/Module-mode/ModuleDemo.html
+++ b/Module-mode/ModuleDemo.html
@@ -7,5 +7,7 @@
 <body>
 <h1>test page</h1>
 <script src="script/ModuleScript.js"></script>
+<script src="../libraryScript/jquery-1.11.3.js"></script>
+<script src="script/JQ_Module.js"></script>
 </body>
 </html>
