加入 Observer-Mode

--- a/Observer-mode/ObserverDemo.html
+++ b/Observer-mode/ObserverDemo.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>ObserverDemo</title>
+    <style type="text/css">
+        .observersContainer{
+            width: 100px;
+            height: 600px;
+            border: 1px solid #000;
+        }
+    </style>
 </head>
 <body>
 <h1>test page ObserverDemo</h1>
 <script src="script/ObserverScript.js"></script>
+
+<button id="addNewObserver">add new observer checkbox</button>
+<input id="mainChecbox" type="checkbox">
+<div id="observersContainer" class="observersContainer"></div>
 
 </body>
 </html>
